Added docstrings and some minor variable renaming.

--- a/configuration/diskimage/node/server.conf
+++ b/configuration/diskimage/node/server.conf
@@ -1,11 +1,11 @@
-[Node]
-Name = Localhost
-Mount Path = /backup/mnt/
-Backup Path = /backup/
-Backup Disk = sda
+[node]
+name = Localhost
+mount_path = /backup/mnt/
+backup_path = /backup/
+backup_disk = sda
 
-[Database]
-Host = 127.0.0.1
-Database = DiskImage
-User = diUser
-Password = diPassword
+[database]
+host = 127.0.0.1
+database = DiskImage
+user = diUser
+password = diPassword
